--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#about">Intermission</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link" href="#services">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portfolio</a>
@@ -67,9 +67,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">Who am I?</h2>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <p class="text-faded">I'm being in school which is named Sunrin Internet HighSchool. I'm specializing in computer software in this high school.Currently I'm interested in Flask which is based on python and be used as web server.</p>
             <a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>
           </div>
         </div>
@@ -90,29 +90,30 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-              <h3>Sturdy Templates</h3>
-              <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+              <h3>Ambition</h3>
+              <p class="text-muted">To be awarded the first prize in the mobile contest.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-              <h3>Ready to Ship</h3>
-              <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+              <h3>Desired University</h3>
+              <p class="text-muted">Sungkyunkwan University <br> Computer Software</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-              <h3>Up to Date</h3>
-              <p class="text-muted">We update dependencies to keep things fresh.</p>
+              <h3>Planning</h3>
+              <p class="text-muted">1. To Memorize English words<br>
+                                    2. To solve a problem in mathematics</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-              <h3>Made with Love</h3>
-              <p class="text-muted">You have to make your websites with love these days!</p>
+              <h3>Family</h3>
+              <p class="text-muted">Including me, there are three people in my family. I live with my mom and dad.</p>
             </div>
           </div>
         </div>
@@ -131,7 +132,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    선린영재원 산출물 프로젝트
                   </div>
                 </div>
               </div>
