--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">Who am I?</h2>
             <hr class="light">
-            <p class="text-faded">I'm being in school which is named Sunrin Internet HighSchool. I'm specializing in computer software in this high school.Currently I'm interested in Flask which is based on python and be used as web server.</p>
+            <p class="text-faded">I'm being in school which is named Sunrin Internet HighSchool. I'm specializing in computer software in this high school.Currently I'm interested in Flask which is based on Python and is used as a web server.</p>
             <a class="btn btn-default btn-xl sr-button" href="#services">Get Started!</a>
           </div>
         </div>
@@ -155,7 +155,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="";>
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
